<resources>
    <string name="app_name">Quản lý Tour</string>
    <string name="home">Trang chủ</string>
    <string name="tour">Chuyến đi</string>
    <string name="employee">Nhân viên</string>
    <string name="schedule">Lịch trình</string>
    <string name="user">Tài khoản</string>
    <string name="settings">Thiết lập</string>
    <string name="insert_failed">Thêm mới thất bại!</string>
    <string name="insert_success">Thêm mới thành công!</string>
    <string name="update_success">Cập nhật thành công!</string>
    <string name="update_failed">Cập nhật thất bại!</string>
    <string name="delete_failed">Xóa thất bại!</string>
    <string name="delete_success">Xóa thành công!</string>
    <string name="insert_employee_failed">Thêm mới tài khoản thất bại!</string>
    <string name="insert_schedule_failed">Thêm mới lịch trình thất bại!</string>
    <string name="insert_tour_failed">Thêm mới tour thất bại!</string>
    <string name="insert_employee_success">Thêm mới tài khoản thành công!!</string>
    <string name="insert_schedule_success">Thêm mới lịch trình thành công!</string>
    <string name="insert_tour_success">Thêm mới tour thành công!</string>
    <string name="update_employee_failed">Sửa thông tin thất bại!</string>
    <string name="update_schedule_failed">Sửa lịch trình thất bại!</string>
    <string name="update_tour_failed">Sửa tour thất bại!</string>
    <string name="update_employee_success">Sửa thông tin thành công!</string>
    <string name="update_schedule_success">Sửa lịch trình thành công!</string>
    <string name="update_tour_success">Sửa tour thành công!</string>
    <string name="delete_employee_failed">Xóa nhân viên thất bại!</string>
    <string name="delete_schedule_failed">Xóa lịch trình thất bại!</string>
    <string name="delete_tour_failed">Xóa tour thất bại!</string>
    <string name="delete_employee_success">Xóa nhân viên thành công!</string>
    <string name="delete_schedule_success">Xóa lịch trình thành công!</string>
    <string name="delete_tour_success">Xóa tour thành công!</string>
    <string name="user_no_data">Không có dữ liệu</string>
    <string name="login_success">Đăng nhập thành công!</string>
    <string name="register_success">Đăng ký thành công!</string>
    <string name="login_title">Bạn đã có tài khoản?</string>
    <string name="register_title">Bạn chưa có tài khoản?</string>
    <string name="account">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="forgot_password">QUÊN MẬT KHẨU?</string>
    <string name="change_to_signup">Người mới? Đăng ký ngay</string>
    <string name="change_to_signin">Đã có tài khoản? Đăng nhập ngay</string>
    <string name="required">Trường này bắt buộc nhập</string>
    <string name="account_invalid">Tài khoản không hợp lệ</string>
    <string name="account_min_length">Tài khoản phải có tối thiểu 5 ký tự</string>
    <string name="password_min_length">Mật khẩu phải có tối thiểu 8 ký tự</string>
    <string name="password_not_true">Mật khẩu không khớp</string>
    <string name="password_invalid">Mật khẩu không hợp lệ</string>
    <string name="confirm_password_invalid">Mật khẩu xác nhận không hợp lệ</string>
    <string name="name_invalid">Tên không hợp lệ</string>
    <string name="age_invalid">Tuổi không hợp lệ</string>
    <string name="phone_invalid">Số điện thoại không hợp lệ</string>
    <string name="gmail_invalid">Gmail không hợp lệ</string>
    <string name="avatar_invalid">Ảnh không hợp lệ</string>
    <string name="error_occur">Có lỗi trong quá trình xử lý!</string>
    <string-array name="sort_employee">
        <item>Sắp xếp theo ngày</item>
        <item>Sắp xếp theo tên</item>
        <item>Sắp xếp theo tuổi</item>
        <item>Sắp xếp theo giới tính</item>
    </string-array>
    <string name="adapter_age"> tuổi</string>
    <string name="female">Nữ</string>
    <string name="male">Nam</string>
    <string name="other">Khác</string>
    <string name="action">Tác vụ</string>
    <string name="send_message">Gửi tin nhắn</string>
    <string name="call">Gọi điện</string>
    <string name="edit">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="sure_to_delete">Bạn có chắc chắn muốn xóa nhân viên </string>
    <string name="cancel">Hủy</string>
    <string name="add_success_title">Thêm thành công</string>
    <string name="edit_success_title">Sửa thành công</string>
    <string name="delete_success_title">Xóa thành công</string>
    <string name="add_success_content">Bạn vừa thêm một nhân viên!</string>
    <string name="edit_success_content">Bạn vừa sửa thông tin một nhân viên!</string>
    <string name="delete_success_content">Bạn vừa xóa một nhân viên!</string>
    <string name="warning">Cảnh báo</string>
    <string name="sure_to_exit">Bạn có chắc muốn đăng xuất khỏi chương trình?</string>
    <string name="logout">Đăng xuất</string>
    <string name="change_avatar">Đổi ảnh đại điện</string>
    <string name="name">Tên</string>
    <string name="age">Tuổi</string>
    <string name="phone">Số điện thoại</string>
    <string name="gender">Giới tính</string>
    <string name="gmail">Gmail</string>
    <string name="save">Lưu</string>
    <string name="search">Tìm kiếm...</string>
    <string name="sort">Sắp xếp</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="grid_view">Lưới</string>
    <string name="list_view">Danh sách</string>
    <string name="add">Thêm</string>
    <string name="change_image">Đổi ảnh</string>
    <string name="welcome">Xin chào</string>
    <string name="support">Hỗ trợ</string>
    <string name="notification">Thông báo</string>
    <string name="help_you">Chúng tôi giúp bạn</string>
    <string name="manage_work">quản lý công việc</string>
    <string name="map">Bản đồ</string>
    <string name="note">Ghi chú</string>
    <string name="report">Báo cáo</string>
    <string name="share">Chia sẻ</string>
    <string name="title">Tiêu đề</string>
    <string name="weather">Thời tiết</string>
    <string name="type_note">Nhập ghi chú của bạn</string>
    <string name="manage_note">Quản lý ghi chú của bạn</string>
    <string name="user_code">Mã nhân viên</string>
    <string name="back">Quay lại</string>
    <string name="user_information">Thông tin người dùng</string>
    <string name="loved_tour">Tour yêu thích</string>
    <string name="privacy">Điều khoản hợp tác</string>
    <string name="name_empty">Họ tên không được để trống!</string>
    <string name="age_empty">Tuổi không được để trống!</string>
    <string name="phone_empty">Số điện thoại không được để trống!</string>
    <string name="price_input">Giá:</string>
    <string name="with_input">Với:</string>
    <string name="name_input">Tên của bạn:</string>
    <string name="fromdate_input">Từ ngày:</string>
    <string name="search_tour">Bạn muốn tìm tour? Nhấn vào đây</string>
    <string name="list_register">Danh sách tour đã đăng ký</string>
    <string name="love">Yêu thích</string>
    <string name="description">Mô tả</string>
    <string name="price">Giá</string>
    <string name="star">Số sao</string>
    <string name="from_date">Từ ngày</string>
    <string name="add_new_tour">Thêm tour mới</string>
    <string name="update_tour">Sửa tour</string>
    <string name="update_btn">Sửa</string>
    <string name="delete_btn">Xóa</string>
    <string name="delete_tour">Xóa tour</string>
    <string name="enter_tour">Nhập thông tin tour</string>
    <string name="register_tour">Đăng ký tour</string>
    <string name="information_tour">Thông tin tour</string>
    <string name="register_btn">Đăng ký</string>
    <string name="information">Thông tin</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="english">Tiếng Anh</string>
    <string name="choose_language">Chọn ngôn ngữ...</string>
    <string name="ok">OK</string>
    <string name="click_ok">Bạn đã nhấn OK</string>
    <string name="contact_us">Liên hệ với chúng tôi</string>
    <string name="article_string" translatable="false">Điều khoản và chính sách</string>
    <string name="article_subheading" translatable="false"> Nội dung</string>
    <string name="heading_fqa" translatable="false">Hỏi đáp FAQ</string>
    <string name="sub_fqa" translatable="false">Nội dung</string>
    <string name="paragrap_fqa" translatable="false">

        <b>
            Hướng dẫn viên được tuyển dụng dựa trên yếu tố nào?

        </b>
        \n
          Trả lời :dựa trên khả năng phù hợp về kiến thức, thể chất, sức khỏe và yêu cầu thể lực cho các hoạt động hướng dẫn được đề xuất.
         \n\n

           <b>
           Hướng dẫn viên hoạt động trong khuôn khổ tiêu chuẩn nào ?

        </b>
        \n
       Trả lời: dựa trên các tiêu chuẩn và quy định của các tổ chức CBT ASEAN và đã ký kết thực hiện Quy tắc ứng xử của CBT ASEAN đối với các Hướng dẫn viên
    \n\n
           <b>
          Hướng dẫn viên có thể tiếp cận được với cơ hội đào tạo nào ?

        </b>
        \n
        Trả lời : Hướng dẫn viên có thể tiếp cận được với cơ hội đào tạo và các chương trình xây dựng năng lực hiện có để nâng cao kỹ năng và kiến thức của họ về:
        \n
        *du lịch bền vững
         \n
        *trình bày, phiên dịch,
         \n
        *quản lý nhóm,
         \n
        *chăm sóc khách hàng/ dịch vụ,
         \n
        *giao tiếp (gồm giao lưu/nhận thức văn hóa, giao tiếp ngôn ngữ và phi ngôn ngữ),
         \n
        *sơ cứu ban đầu và an toàn,
         \n
        *truyền thống văn hóa địa phương nguyên bản, hội nhập, nhận diện và hiểu về giá trị bản sắc văn hóa địa phương,
         \n
        *các vấn đề bảo vệ môi trường,
         \n
        *quy định và hướng dẫn của tổ chức CBT,
         \n
        *các nội dung cần thiết khác theo yêu cầu của Ban quản lý CBT
    </string>
</resources>